@@ -1,14 +1,13 @@
 Package: glmmADMB
-Version: 0.6	
-Date: 2011-05-03
+Version: 0.6.1	
+Date: 2011-07-07
 Title: Generalized Linear Mixed Models Using AD Model Builder
 Author: Hans Skaug <Hans.Skaug@mi.uib.no>, Dave Fournier <otter@otter-rsch.com>,
   Anders Nielsen <andersn@hawaii.edu>, Arni Magnusson <arnima@hafro.is>, and Ben
   Bolker <bolker@mcmaster.ca>
 Maintainer: Hans Skaug <Hans.Skaug@mi.uib.no>
 LazyData: yes
-Description: Fits mixed-effects models to count data using Poisson, negative
-  binomial, or Bernoulli response distributions.
+Description: Fits mixed-effects models to count data using a variety of distributions
 Imports: stats, nlme
 Depends: methods, MASS
 Suggests: lattice, lme4, coda, mlmRev
