@@ -4,6 +4,13 @@
 \title{glmmADMB News}
 \encoding{UTF-8}
 
+\section{Changes in version 0.6.1 (2011-07-08)}{
+  \itemize{
+    \item Allow random effects to be specified separately in 'random'
+    \item Add fixef() as synonym for coef(), for lme4-compatibility
+    \item Add 'start' argument (poorly tested)
+}}
+
 \section{Changes in version 0.6 (2011-05-04)}{
   \itemize{
     \item Changed formula to lme4-style: random effects, and offsets,
